@@ -1,6 +1,11 @@
 Revision history for Devel-Platform-Info
 ========================================
 
+        - Updated broken link in the pod.
+          PR #4 by Mohammad S Anwar
+          https://github.com/barbie/devel-platform-info/pull/4
+        - fixes suggested by Kritika.io.
+
 0.16    2016-04-22
         - Codename updates for Linux & Mac OSX.
 
